s_binMonitoring/k8s/binMonitoring/bin-monitoring-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bin-monitoring
  namespace: waste-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bin-monitoring
  template:
    metadata:
      labels:
        app: bin-monitoring
    spec:
      containers:
        - name: bin-monitoring
          image: registry.deti/waste-app/bin_monitoring:latest
          ports:
            - containerPort: 5004
          volumeMounts:
            - name: sensor-lookup
              mountPath: /data
      volumes:
        - name: sensor-lookup
          persistentVolumeClaim:
            claimName: sensor-lookup-pvc
