s_binMonitoring/k8s/binMonitoring/bin-monitoring-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bin-monitoring
  namespace: waste-app
spec:
  selector:
    app: bin-monitoring
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5004
